k8s/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: "go-hello-service"
  labels:
    app: go-hello-service
spec:
  selector:
    app: go-hello
  type: ClusterIP
  ports:
  - name: go-hello-service
    port: 8081
    targetPort: 80
    protocol: TCP
