k8s/mysql-headless.yml
apiVersion: v1
kind: Service
metadata:
  name:  mysql-hsvc
spec:
  selector:
    app: mysql
  ports:
    - port: 3306 
  clusterIP: None
