k8s/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: "go-hello-service"
  labels:
    app: go-hello-service
spec:
  selector:
    app: go-hello
  type: NodePort
  ports:
  - name: go-hello-service
    port: 9000
    targetPort: 80
    nodePort: 30001
    protocol: TCP
