k8s/ingress.yml
#AINDA TENHO QUE TESTAR E USANDO O CLOUDFLARE
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "kubefc.com.br"
    http:
      paths:
      - pathType: Prefix
      path: "/"
      backend:
        serviceName: go-hello-service
